recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:12: error: Unmatched closing brace '}' ignored here
}
^